# cpp-lab-3

./: CMakeLists.txt  lab3  lab3_c  main  main.c  measure-time.sh  test-generator.py
